# arxgent

./: .coverage  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  session-ses_1ab5.md
.github/workflows/: ci.yml
arxgent/: __main__.py  agents.py  categories.py  cli.py  config.py  feedback.py  interest.py  profile.py  ranker.py  storage.py  summarizer.py
tests/: conftest.py  test_agents.py  test_categories.py  test_cli.py  test_config.py  test_profile.py  test_storage.py
