[project]
name = "arxgent"
version = "0.1.0"
description = "A CLI research agent that finds and summarizes arxiv papers based on your interests"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "arxiv>=2.1",
    "litellm>=1.60",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "questionary>=2.0",
]

[project.scripts]
arxgent = "arxgent.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
]

[tool.ruff]
line-length = 100
target-version = "py311"
